--- a/static/nyan-charts.css
+++ b/static/nyan-charts.css
@@ -40,7 +40,7 @@ body {
     text-align:center;
 }
 
-#selections span{
+#selections span, #selections a{
     margin: 0 15px;
 }
 
@@ -49,9 +49,18 @@ body {
     text-decoration: line-through;
 }
 
-#currency #ltc{
-    color: white;
+#currency #btc, #currency #ltc{
+    color: gray;
     text-decoration: none;
+}
+
+.exchange {
+    display: none;
+}
+
+.exchange a {
+    color: gray;
+    text-decoration: none;   
 }
 
 #price-list {
@@ -118,11 +127,15 @@ body {
 	-webkit-box-shadow: 0 3px 10px rgba(0,0,0,0.1);*/
 }
 
-.chart {
+.chart, chart {
 	width: 100%;
 	height: 100%;
 	font-size: 14px;
 	line-height: 1.2em;
+}
+
+chart {
+    display: none;
 }
 
 .legend table {
