--- a/app/client/views/price.html
+++ b/app/client/views/price.html
@@ -1,7 +1,9 @@
 <div id="content">
     <div id="price-list">
         <div id="ticker">
-            <div id="current"><span id="value">9001</span> <span ng-if="market == 'btc'">m</span>{{market | uppercase}} / NYAN</div><br>
+            <div id="current">
+              $<span class="value">?</span> USD / {{market | uppercase}}
+            </div><br>
             <!--<div id="bid">much <span style="color: #0f0">bid</span>:
                 <span id="current-bid">233</span>
             </div>
@@ -13,9 +15,9 @@
             <table id="trades">
                 <tbody>
                     <tr id="table-header">
-<!--                        <th>Traded</th>-->
                         <th>Time</th>
                         <th>Rate</th>
+                        <th>Amount</th>
                     </tr>
                 </tbody>
             </table>
@@ -23,18 +25,11 @@
         <br><br>
     </div>
 
-    <h3 style="color: #999;"><span ng-if="market == 'btc'">m</span>{{market | uppercase}} / NYAN on {{exchange}}</h3>
+    <h3 style="color: #999;">$<span class="value">???</span> USD / {{market | uppercase}} on {{exchange}}</h3>
 
     <div class="graph-container">
         <div id="price-overtime" class="chart"></div>
     </div>
 
-    <p class="message" style="color: #333">You can zoom or drag on the chart to see more data Nyan~</p>
+    <p class="message" style="color: #333">You can zoom and drag on the chart to explore data</p>
 </div>
-
-
-<!--
-    <div class="graph-container">
-        <chart ng-model='data'></chart>
-    </div>
--->
